[package]
name = "myip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = [
    "tokio",
    "http1",
    "json",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "net",
] }
